test commit should not compile

--- a/www/index.html
+++ b/www/index.html
@@ -67,8 +67,10 @@
             <core-card id="core_card" vertical layout start>
                 <div style="padding: 20px;">This is a sample project.  Please share my blog if you've found this useful</div>
             </core-card>
-            <paper-toast id="toast1" text="Created by Nic Raboy"></paper-toast>
+            <paper-toast id="toast1" text="Created by Nic Raboy, hacked by Jason Trout"></paper-toast>
         </core-scaffold>
         <paper-fab icon="add" onclick="document.querySelector('#toast1').show()"></paper-fab>
     </body>
 </html>
+
+No compiling for you!
