--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,8 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
         <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-        <link rel="import" href="bower_components/paper-material/paper-material.html">
-        <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
+<!--    <link rel="import" href="bower_components/paper-material/paper-material.html">
+        <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script> -->
     </head>
 <!--    <body onload="firebase_accesser()"> -->
       <body>
@@ -40,6 +40,7 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
+<!--
 	    <paper-material elevation="1">
               <p id="load1"> loading... </p>
               <p id="load2"> loading... </p>
@@ -51,6 +52,7 @@
               <p id="load8"> loading... </p>
               <p id="load9"> loading... </p>
             </paper-material>
+-->
         </div>
 
 
