--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
     Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
-
     Licensed to the Apache Software Foundation (ASF) under one
     or more contributor license agreements.  See the NOTICE file
     distributed with this work for additional information
@@ -9,9 +8,7 @@
     to you under the Apache License, Version 2.0 (the
     "License"); you may not use this file except in compliance
     with the License.  You may obtain a copy of the License at
-
     http://www.apache.org/licenses/LICENSE-2.0
-
     Unless required by applicable law or agreed to in writing,
     software distributed under the License is distributed on an
     "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -19,84 +16,28 @@
     specific language governing permissions and limitations
     under the License.
 -->
-
 <html>
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
+        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
-        <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-<!--    <link rel="import" href="bower_components/paper-material/paper-material.html">
-        <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script> -->
     </head>
-<!--    <body onload="firebase_accesser()"> -->
-      <body>
+    <body>
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
-<!--
-	    <paper-material elevation="1">
-              <p id="load1"> loading... </p>
-              <p id="load2"> loading... </p>
-              <p id="load3"> loading... </p>
-              <p id="load4"> loading... </p>
-              <p id="load5"> loading... </p>
-              <p id="load6"> loading... </p>
-              <p id="load7"> loading... </p>
-              <p id="load8"> loading... </p>
-              <p id="load9"> loading... </p>
-            </paper-material>
--->
         </div>
-
-
-	
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
-<!--	<script> 
-	    function firebase_accesser() {
-                var myFirebaseRef = new Firebase("https://swiki.firebaseio.com/");
-                myFirebaseRef.child("9mile/0/company").on("value", function(snapshot) {
-                   document.getElementById("load1").innerHTML = snapshot.val();
-                });
-                myFirebaseRef.child("9mile/0/linkedin").on("value", function(snapshot) {
-                   document.getElementById("load2").innerHTML = snapshot.val();
-                });
-                myFirebaseRef.child("9mile/0/name").on("value", function(snapshot) {
-                   document.getElementById("load3").innerHTML = snapshot.val();
-                });
-                myFirebaseRef.child("9mile/0/photoUrl").on("value", function(snapshot) {
-                   document.getElementById("load4").innerHTML = snapshot.val();
-                });
-                myFirebaseRef.child("9mile/0/priority").on("value", function(snapshot) {
-                   document.getElementById("load5").innerHTML = snapshot.val();
-                });
-                myFirebaseRef.child("9mile/0/shortDescription").on("value", function(snapshot) {
-                   document.getElementById("load6").innerHTML = snapshot.val();
-                });
-                myFirebaseRef.child("9mile/0/twitter").on("value", function(snapshot) {
-                   document.getElementById("load7").innerHTML = snapshot.val();
-                });
-                myFirebaseRef.child("9mile/0/type").on("value", function(snapshot) {
-                   document.getElementById("load8").innerHTML = snapshot.val();
-                });
-                myFirebaseRef.child("9mile/0/url").on("value", function(snapshot) {
-                   document.getElementById("load9").innerHTML = snapshot.val();
-                });
-                
-            }
-        </script>
--->
     </body>
 </html>
-
-
