--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
+        <link rel="import" href="bower_components/paper-material/paper-material.html">
         <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
     </head>
     <body onload="firebase_accesser()">
@@ -37,15 +38,17 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
-              <p id="load1"> loading... </p>
-              <p id="load2"> loading... </p>
-              <p id="load3"> loading... </p>
-              <p id="load4"> loading... </p>
-              <p id="load5"> loading... </p>
-              <p id="load6"> loading... </p>
-              <p id="load7"> loading... </p>
-              <p id="load8"> loading... </p>
-              <p id="load9"> loading... </p>
+              <paper-material elevation="5">
+                <p id="load1"> loading... </p>
+                <p id="load2"> loading... </p>
+                <p id="load3"> loading... </p>
+                <p id="load4"> loading... </p>
+                <p id="load5"> loading... </p>
+                <p id="load6"> loading... </p>
+                <p id="load7"> loading... </p>
+                <p id="load8"> loading... </p>
+                <p id="load9"> loading... </p>
+              </paper-material>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
