--- a/www/index.html
+++ b/www/index.html
@@ -28,18 +28,24 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
-        <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+<!--    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
         <link rel="import" href="bower_components/paper-material/paper-material.html">
+        <link rel="import" href="bower_components/iron-component-page/iron-component-page.html">
+-->
+        <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+        <link rel="import" href="../bower_components/paper-button/paper-button.html">
+        <link rel="import" href="../bower_components/paper-input/paper-input.html">
+    
         <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
     </head>
-    <body onload="firebase_accesser()">
+    <body unresolved onload="firebase_accesser()">
         <div class="app">
             <h1>PhoneGap</h1>
+
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
-                <paper-material elevation="1">
                     <p id="load1"> loading... </p>
                     <p id="load2"> loading... </p>
                     <p id="load3"> loading... </p>
@@ -49,7 +55,8 @@
                     <p id="load7"> loading... </p>
                     <p id="load8"> loading... </p>
                     <p id="load9"> loading... </p>
-                </paper-material>
+                    <paper-input label="Your Name Here"></paper-input>
+                    <paper-button>Say Hello</paper-button>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
@@ -89,6 +96,17 @@
                 
             }
         </script>
-
+    <script>
+      // To ensure that elements are ready on polyfilled browsers, 
+      // wait for WebComponentsReady. 
+      document.addEventListener('WebComponentsReady', function() {
+        var input = document.querySelector('paper-input');
+        var button = document.querySelector('paper-button');
+        var greeting = document.getElementById("greeting");
+        button.addEventListener('click', function() {
+          greeting.textContent = 'Hello, ' + input.value;
+        });
+      });
+    </script>
     </body>
 </html>
