removed polymer invokes

--- a/www/index.html
+++ b/www/index.html
@@ -55,8 +55,9 @@
                     <p id="load7"> loading... </p>
                     <p id="load8"> loading... </p>
                     <p id="load9"> loading... </p>
-                    <paper-input label="Your Name Here"></paper-input>
+<!--                <paper-input label="Your Name Here"></paper-input>
                     <paper-button>Say Hello</paper-button>
+-->
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
