created index.html from index_database_access.html

--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
     </head>
     <body unresolved onload="firebase_accesser()">
         <div>
-            Hello Firebase!
+            Hello Firebaseman!
             <p id="load1"> loading... </p>
             <p id="load2"> loading... </p>
             <p id="load3"> loading... </p>
