added labbook.pdf, removed old .odt files

--- a/www/index_database_access.html
+++ b/www/index_database_access.html
@@ -32,9 +32,10 @@
     </head>
     <body unresolved onload="firebase_accesser()">
         <div>
+            <p> Hello Firebase! </p>
             <p id="load1"> loading... </p>
-            <p id="load2"> loading... </p>
-            <p id="load3"> loading... </p>
+            <p id="load2"> </p>
+            <p id="load3"> </p>
             <img id="img1" src="800px-Tilde.svg.png"/>
             
         </div>
