files for database

--- a/www/index_unvulcanized.html
+++ b/www/index_unvulcanized.html
@@ -20,7 +20,7 @@
     </head>
 
     <body unresolved onload="firebase_accesser()">
-        <paper-card heading="Emmental" image="http://placehold.it/350x150/FFC107/000000" id="headerImage">
+        <paper-card heading="---" image="http://placehold.it/350x150/FFC107/000000" id="headerImage">
             <div class="card-content">
                 <table border="1">
                     <tr>
