--- a/www/index_database_access.html
+++ b/www/index_database_access.html
@@ -36,7 +36,7 @@
             <p id="load1"> loading... </p>
             <p id="load2"> </p>
             <p id="load3"> </p>
-            <img id="img1" src="800px-Tilde.svg.png"/>
+            <img id="img1" src=""/>
             
         </div>
 	    <script> 
