--- a/www/index_unvulcanized.html
+++ b/www/index_unvulcanized.html
@@ -27,7 +27,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="index.css" />
 -->
 
         <meta charset="utf-8">
@@ -51,7 +51,7 @@
     </head>
 
     <body unresolved onload="firebase_accesser()">
-        <paper-card heading="---" image="http://placehold.it/350x150/FFC107/000000" id="headerImage">
+        <paper-card heading="---" image="" id="headerImage">
             <div class="card-content">
                 <table border="0">
                     <tr>
