--- a/www/polymer_card_browser.html
+++ b/www/polymer_card_browser.html
@@ -1,26 +1,29 @@
-<paper-card heading="---" image="" id="headerImage">
+<div>
+    Message from Jason
+    <paper-card heading="---" image="" id="headerImage">
         <div class="card-content">
-        <table border="0">
-            <tr>
-                <td>CEO:</td>
-                <td id="CEO_Field">...</td>
-            </tr>
-            <tr>
-                <td>Motto:</td>
-                <td id="Motto_Field">...</td>
-            </tr>
-        </table>
-        <table border="0">
-            <tr>
-                <td><paper-input always-float-label 
-                           auto-validate allowed-pattern="[0-9]"
-                           label="Employee Count = ?" id="EmployeeCount_Field"></paper-input></td>
-                <td><paper-button onclick="changeEmployeeCountInDatabase()">Update</paper-button></td>
-            </tr>
-        </table>
-    </div>
-    <div class="card-actions">
-        <paper-button onclick="displayCompanyXm1()">&lt;-</paper-button>
-        <paper-button onclick="displayCompanyXp1()">-&gt;</paper-button> 
-    </div>
-</paper-card>
+            <table border="0">
+                <tr>
+                    <td>CEO:</td>
+                    <td id="CEO_Field">...</td>
+                </tr>
+                <tr>
+                    <td>Motto:</td>
+                    <td id="Motto_Field">...</td>
+                </tr>
+            </table>
+            <table border="0">
+                <tr>
+                    <td><paper-input always-float-label 
+                                     auto-validate allowed-pattern="[0-9]"
+                                     label="Employee Count = ?" id="EmployeeCount_Field"></paper-input></td>
+                    <td><paper-button onclick="changeEmployeeCountInDatabase()">Update</paper-button></td>
+                </tr>
+            </table>
+        </div>
+        <div class="card-actions">
+            <paper-button onclick="displayCompanyXm1()">&lt;-</paper-button>
+            <paper-button onclick="displayCompanyXp1()">-&gt;</paper-button> 
+        </div>
+    </paper-card>
+</div>
