--- a/www/ficlop_login.html
+++ b/www/ficlop_login.html
@@ -1,3 +1,4 @@
+
 <div>
     <div style="font-style:italic"> <font size="24">Ficlop Polymer Demo</font></div>
     <table border="0">
@@ -11,14 +12,14 @@
             <td><p id="loginSuccessFail_field" style="color:red;12px"></p></td>
         </tr>
         <tr>
-            <td>
-                <paper-input always-float-label auto-validate 
-                            pattern="*" 
-                            error-message="-"
-                            label="password" 
-                            id="password_field"> 
+            <td><paper-input always-float-label auto-validate 
+                             pattern="*" 
+                             error-message="-"
+                             label="password" 
+                             id="password_field"> 
             </paper-input></td>
             <td><paper-button onclick="loginWithCredentials()">Log in</paper-button></td>
         </tr>
     </table>
 </div>
+
