--- a/www/ficlop_main.html
+++ b/www/ficlop_main.html
@@ -45,17 +45,12 @@
         <link rel="import" href="../bower_components/paper-button/paper-button.html">
         <link rel="import" href="../bower_components/paper-card/paper-card.html">
         <link rel="import" href="../bower_components/paper-input/paper-input.html">
-<!--    
-        <link rel="import" href="../bower_components/paper-input-container.html">
-        <link rel="import" href="../bower_components/paper-input-error.html">
-        <link rel="import" href="../bower_components/paper-textarea.html">
 
-        98281b8d77b2dd59d706097b8e9f637c1894b8de
--->
+        <link rel="import" href="../bower_components/paper-input/paper-input.html">
         <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
-        <script type="text/javascript" src="polymer_scripts.js"></script>     
+        <script type="text/javascript" src="ficlop_scripts.js"></script>     
     </head>
-    <body unresolved onload="loadPage(&quot;polymer_login.html&quot;)">
+    <body unresolved onload="loadPage(&quot;ficlop_login.html&quot;)">
         ERROR: Script Kickoff Failure!
     </body>
 </html>
