hello world version 0.5

--- a/www/ficlop_card_browser.html
+++ b/www/ficlop_card_browser.html
@@ -1,5 +1,4 @@
 <div>
-    Message from Jason
     <paper-card heading="---" image="" id="headerImage">
         <div class="card-content">
             <table border="0">
@@ -17,9 +16,12 @@
                     <td><paper-input always-float-label 
                                      auto-validate allowed-pattern="[0-9]"
                                      label="Employee Count = ?" id="EmployeeCount_Field"></paper-input></td>
-                    <td><paper-button onclick="changeEmployeeCountInDatabase()">Update</paper-button></td>
+                    <td><paper-button id="UpdateEmployeeCountButton" onclick="changeEmployeeCountInDatabase()">Update</paper-button></td>
                 </tr>
             </table>
+            <div id ="hiddenDataDivider">
+                <div></div>
+            </div>
         </div>
         <div class="card-actions">
             <paper-button onclick="displayCompanyXm1()">&lt;-</paper-button>
