--- a/www/ficlop_main.html
+++ b/www/ficlop_main.html
@@ -50,7 +50,7 @@
         <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
         <script type="text/javascript" src="ficlop_scripts.js"></script>     
     </head>
-    <body unresolved onload="loadPage(&quot;ficlop_login.html&quot;)">
+    <body unresolved onload="loadLogin()">
         ERROR: Script Kickoff Failure!
     </body>
 </html>
