--- a/www/ficlop_login.html
+++ b/www/ficlop_login.html
@@ -1,4 +1,3 @@
-
 <div>
     <div style="font-style:italic"> <font size="24">Ficlop Polymer Demo</font></div>
     <table border="0">
@@ -18,7 +17,7 @@
                              label="password" 
                              id="password_field"> 
             </paper-input></td>
-            <td><paper-button onclick="loginWithCredentials()">Log in</paper-button></td>
+            <td><paper-button onclick="loginWithCredentials()" raised>Log in</paper-button></td>
         </tr>
     </table>
 </div>
