--- a/www/ficlop_main.html
+++ b/www/ficlop_main.html
@@ -23,13 +23,6 @@
 
     <head>
         <title>Ficlop Demo</title>
-<!--
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="index.css" />
--->
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -49,8 +42,12 @@
         <link rel="import" href="../bower_components/paper-input/paper-input.html">
         <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
         <script type="text/javascript" src="ficlop_scripts.js"></script>     
+        <script src="jquery.js"></script>
     </head>
+
+
     <body unresolved onload="loadLogin()">
         ERROR: Script Kickoff Failure!
     </body>
+
 </html>
