--- a/www/firebase_access.html
+++ b/www/firebase_access.html
@@ -32,7 +32,6 @@
     </head>
     <body unresolved onload="firebase_accesser()">
         <div>
-            <p> Hello Firebase! </p>
             <p id="load1"> loading... </p>
             <p id="load2"> </p>
             <p id="load3"> </p>
@@ -42,15 +41,15 @@
 	    <script> 
 	        function changeLoad1(databaseReply) {document.getElementById("load1").innerHTML = databaseReply.val();}
 	        function changeLoad2(databaseReply) {document.getElementById("load2").innerHTML = databaseReply.val();}
-            function changeLoad3(databaseReply) {document.getElementById("load3").innerHTML = databaseReply.val();}
-            function changeImg1(databaseReply)  {document.getElementById("img1") .src       = databaseReply.val();}
+            	function changeLoad3(databaseReply) {document.getElementById("load3").innerHTML = databaseReply.val();}
+	        function changeImg1(databaseReply)  {document.getElementById("img1") .src       = databaseReply.val();}
 	            
 	        function firebase_accesser() {
                 var myFirebaseRef = new Firebase("https://brilliant-fire-2109.firebaseio.com/");
-                myFirebaseRef.child("Companies/0/Company").on("value", changeLoad1);
-                myFirebaseRef.child("Companies/0/Motto").on  ("value", changeLoad2);
-                myFirebaseRef.child("Companies/0/CEO").on    ("value", changeLoad3);
-                myFirebaseRef.child("Companies/0/Icon").on   ("value", changeImg1 );
+                myFirebaseRef.child("CompaniesPublic/0/Company").on("value", changeLoad1);
+                myFirebaseRef.child("CompaniesPublic/0/Motto").on  ("value", changeLoad2);
+                myFirebaseRef.child("CompaniesPublic/0/CEO").on    ("value", changeLoad3);
+                myFirebaseRef.child("CompaniesPublic/0/Icon").on   ("value", changeImg1 );
             }
         </script>
     </body>
